--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ nbconvert[qtpdf]
 wheel
 scikit-learn
 matplotlib
-torch
-torchvision
-torchaudio
+torch; sys_platform == 'darwin'
+torchvision; sys_platform == 'darwin'
+torchaudio; sys_platform == 'darwin'
+
+# Torch with CUDA
+# https://pytorch.org/get-started/locally/
+# pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
