--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,8 @@ torchaudio; sys_platform == 'darwin'
 
 # Torch with CUDA
 # https://pytorch.org/get-started/locally/
+# Verify: python -c "import torch; print(torch.cuda.is_available())"
 # pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124
+
+ruff
+mypy
