--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -2,3 +2,6 @@ git+https://github.com/facebookresearch/segment-anything.git
 roboflow
 supervision
 opencv-python
+rich
+
+# https://pytorch.org/get-started/locally/
