--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,4 +1,5 @@
 git+https://github.com/facebookresearch/segment-anything.git
+git+https://github.com/ChaoningZhang/MobileSAM.git
 roboflow
 supervision
 opencv-python
@@ -6,5 +7,6 @@ rich
 pandas
 pandas-stubs
 pyarrow
+timm
 
 # https://pytorch.org/get-started/locally/
